lox-tests/tests/function/missing_comma_in_parameters.stderr
ERROR: Expected ')' after function parameters
 --> 3:1
  |
3 | fun foo(a, b c, d, e, f) {}
  | ^------------^
